--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@
 }
 .announcement-card {
     height: 40vh;
-    width: 20vw;
+    width: 22vw;
     position: relative;
     bottom: 5.5vw;
     border-radius: 1vw;
@@ -77,7 +77,7 @@
 .people-card {
     background-color: #454747;
     height: 30vh;
-    width: 20vw;
+    width: 22vw;
     border-radius: 1vw; 
     position: relative;
     bottom: 6vw;
@@ -217,3 +217,53 @@
     position: relative;
     left: 16vw;
 }
+.announcement-sub-heading {
+    color: #bec1c2;
+    font-size: 1vw;
+    font-weight: normal;
+    position: relative;
+    left: 1vw;
+    top: 1vw;
+}
+.announcement-sub-description {
+    color: #bec1c2;
+    font-size: 0.8vw;
+    font-weight: normal;
+    position: relative;
+    left: 1vw;
+    top: 1vw;
+}
+.line {
+    position: relative;
+    top: 1vw;
+}
+.image-icon {
+    border-radius: 4vw;
+    height: 5vw;
+    width: 5vw;
+}
+.image-account-icon {
+    height: 4vw;
+    width: 4vw;
+    border-radius: 2vw;
+}
+.people-icon {
+    height: 4vw;
+    width: 4vw;
+    background-color: white;
+    border-radius: 2vw;
+    position: relative;
+    left: 1vw;
+    margin-top: 0.4vw;
+ }
+ .people-name {
+    color: white;
+    font-weight: normal;
+    position: relative;
+    left: 2vw;
+    font-size: 
+ }
+ button:hover {
+    background-color: grey;
+    color: white;
+  }  
